--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lennerblom.github.io/calculator",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.11.0",
     "numeral": "^2.0.6",
     "react": "^16.6.0",
@@ -13,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
